# ivideon

./: README.md  UML_class_diagram.vsdx  task_project_ivideon.txt
client/: CMakeLists.txt  Client.hpp  Client_command.hpp  main.cpp
common/: ICommand.hpp
server/: CMakeLists.txt  Diod.hpp  Interfaces_MVP.hpp  Presenter.hpp  Server.hpp  Server_command.hpp  Server_command_factory.hpp  View.hpp  main.cpp
